# Zelkova

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.claude/: launch.json
apps/hyperalpha/: .env.example  Dockerfile  pyproject.toml
apps/hyperalpha/hyperalpha/: __init__.py  config.py  crew.py  graph.py  main.py  paper_trader.py  types.py
apps/hyperalpha/hyperalpha/agents/: _helpers.py  analysts.py  fund_manager.py  fundamentals_analyst.py  macro_analyst.py  research_debate.py  risk_manager.py  sentiment_analyst.py  stat_arb.py  strategy_signals.py  super_agent.py  ta_strategy_agent.py  technicals_analyst.py  trader.py  trader_risk_fund.py
apps/hyperalpha/hyperalpha/data/: hyperliquid_connector.py
apps/hyperalpha/hyperalpha/execution/: __init__.py  agent_loop.py  circuit_breaker.py  executor.py
apps/hyperalpha/hyperalpha/indicators/: __init__.py  core.py  fibonacci.py  momentum.py  stat_arb_metrics.py  trend.py  volatility.py  volume.py
apps/hyperalpha/hyperalpha/knowledge/: market_regimes.md  risk_playbooks.md  strategies.md
apps/hyperalpha/hyperalpha/mcp/: __init__.py  indicators_tools.py  market_data_tools.py  portfolio_tools.py
apps/hyperalpha/hyperalpha/rag/: __init__.py  knowledge_base.py  retriever.py
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx
apps/web/scripts/: db-push.ts
apps/worker/: Dockerfile  package.json  tsconfig.json
apps/worker/src/: db.ts  index.ts
(+177 files in other folders)
